--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@ and open the template in the editor.
                 }
                 
                 header {
-                font: Comic Sans;
-                font-size: 50px;
                 height: 200px;
                 width: 100%;
-                background-color: black
+                background-color: black;
+                padding: 0px;
                 }
                 h1
                 {
-                 align-content: center;
-                 vertical-align: baseline;
+                font: Comic Sans;
+                font-size: 60px;
+                color: whitesmoke;
+                align-content: center;
+                vertical-align: baseline;
                 }
    </style>
     <body>
