--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
                 height: 200px;
                 width: 100%;
                 background-color: black;
-                padding: 0px;
+                //padding: 0px;
                 }
                 h1
                 {
