--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ and open the template in the editor.
     </head>
     <style>
                 body{
-                background-color: #ffccff
+                background-color: #ffccff;
+                margin: 0px;
                 }
                 
                 header {
