--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ and open the template in the editor.
         <br>
         </div>
         <br>
-        <center><h2>Premiera Cyberpunka za: </h2></br>
+        <center><h2>Premiera Cyberpunka za: </h2></center></br>
      <center><p id="timer"></p></center>
     <script type="text/javascript" src="timer.js"></script>
     
