--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ and open the template in the editor.
         </div>
         <br>
         <center><h2>Premiera Cyberpunka za: </h2></center></br>
-        <center><p id="timer"></p></center><br>
-        <center><p id="timerseconds"></p></center><br>
+        <center><p id="timer"></p></center>
+        <center><p id="timerseconds"></p></center>
         
     <script type="text/javascript" src="timer.js"></script>
     <script type="text/javascript" src="timerseconds.js"></script>
