--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
                 height: 200px;
                 width: 100%;
                 background-color: black;
+                top: 0px;
                 //padding: 0px;
                 }
                 h1
@@ -46,8 +47,8 @@ and open the template in the editor.
         </div>
         <br>
         <center><h2>Premiera Cyberpunka za: </h2></center></br>
-        <center><p id="timer"></p></center>
-        <center><p id="timerseconds"></p></center>
+        <center><p id="timer"></p></center><br>
+        <center><p id="timerseconds"></p></center><br>
         
     <script type="text/javascript" src="timer.js"></script>
     <script type="text/javascript" src="timerseconds.js"></script>
