--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
                 }
                 
                 div {
-                height: 200px;
+                height: 300px;
                 width: 100%;
                 background-color: black;
                 top: 0px;
@@ -42,8 +42,7 @@ and open the template in the editor.
     <body>
         
         <div>
-         <h1><b>Kiedyś coś tu będzie...</b></h1>
-        <br>
+            <image src="LOGOXOGAMES2.PNG" vertical-align="center">
         </div>
         <br>
         <center><h2>Premiera Cyberpunka za: </h2></center></br>
