--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ and open the template in the editor.
     <body>
         
         <div>
-            <image src="LOGOXOGAMES2.PNG" vertical-align="center">
+            <center><image src="LOGOXOGAMES2.PNG" vertical-align="center"></center>
         </div>
         <br>
         <center><h2>Premiera Cyberpunka za: </h2></center></br>
