--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ and open the template in the editor.
         <div>
             <center><image src="LOGOXOGAMES2.PNG" vertical-align="center"></center>
         </div>
+        <a href="HTMLPAGE1.html">counter words</a>
         <br>
         <center><h2>Premiera Cyberpunka za: </h2></center></br>
         <center><p id="timer"></p></center><br>
