--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -12,7 +12,7 @@
 <textarea name="text" cols="100" rows="30"></textarea><br/>
 
 <h3>ilość słow:</h3> <p name="result"></p>
-
+<script type="text/javascript" src="counter.ts"></script>
 
 </body>
 </html>
